[package]
name = "shiro"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = { version = "0.2.0" }
base64ct = { version = "1.6.0", features = ["alloc"] }
hex = { version = "0.4.3" }
sha2 = { version = "0.10.7" }
